<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/white" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center_vertical">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/title1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Health"
                                android:textAllCaps="true"
                                android:textSize="30sp" />

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:contentDescription="App Logotype"
                                android:elevation="5dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/icon" />

                            <TextView
                                android:id="@+id/title2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Statica"
                                android:textAllCaps="true"
                                android:textSize="30sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/formHeaderText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/LoginView_Header_Login"
                            android:textAllCaps="true"
                            android:textColor="@color/primaryDarkColor"
                            android:textSize="20sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/emailInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/LoginView_EmailInput_Label"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/emailInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passwordInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/LoginView_PasswordInput_Label"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/passwordInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passwordConfirmationInputContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/LoginView_PasswordConfirmationInput_Label">

                            <EditText
                                android:id="@+id/passwordConfirmationInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/actionButton"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:textSize="14sp"
                            android:backgroundTint="@color/colorPrimary"
                            android:text="@string/LoginView_Button_Text"
                            android:textColor="#FFFF" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bottomButtonsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/loginLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryDarkColor"
                            android:layout_marginTop="5dp"
                            android:text="@string/LoginView_LoginLink_Text" />

                        <TextView
                            android:id="@+id/registrationLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryDarkColor"
                            android:layout_marginTop="5dp"
                            android:text="@string/LoginView_RegistrationLink_Text" />

                        <TextView
                            android:id="@+id/recoveryLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryDarkColor"
                            android:layout_marginTop="5dp"
                            android:text="@string/LoginView_RecoveryLink_Text" />

                    </LinearLayout>

                    <TextView
                            android:id="@+id/webLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:layout_marginTop="30dp"
                            android:text="@string/LoginView_WebLink_Text"
                            android:layout_gravity="center" />

                </LinearLayout>

            </ScrollView>

        </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>